--- a/Contact.html
+++ b/Contact.html
@@ -5,41 +5,6 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<style>
-		form {
-			max-width: 600px;
-			margin: auto;
-		}
-		input[type=text], input[type=email], textarea {
-			width: 100%;
-			padding: 12px;
-			border: 1px solid #ccc;
-			border-radius: 4px;
-			resize: vertical;
-			margin-bottom: 16px;
-			font-size: 16px;
-		}
-		label {
-			font-size: 18px;
-			font-weight: bold;
-		}
-		textarea {
-			height: 150px;
-		}
-		input[type=submit] {
-			background-color: #4CAF50;
-			color: white;
-			padding: 12px 20px;
-			border: none;
-			border-radius: 4px;
-			cursor: pointer;
-			font-size: 18px;
-			margin-bottom: 16px;
-			width: 100%;
-		}
-		input[type=submit]:hover {
-			background-color: #45a049;
-		}
-
 		body {
 			font-family: Arial, sans-serif;
 			margin: 0;
@@ -116,21 +81,10 @@
     <a href="Blog.html">Blog</a>
 		<a href="Portfolio.html">Portfolio</a>
 	</nav>
-    
-<section>
+  
+ 	<section>
   <h2>Contact Me</h2>
-  <form action="Submit.php" method="post">
-    <label for="name">Name:</label>
-    <input type="text" id="name" name="name" required>
-
-    <label for="email">Email:</label>
-    <input type="email" id="email" name="email" required>
-
-    <label for="message">Message:</label>
-    <textarea id="message" name="message" required></textarea>
-
-    <button type="submit">Send</button>
-  </form>
+    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdOWnSy4qHpo3eAVIs1wMBVV1lmAI6dk3sBtfYonKiUh0wdEg/viewform?embedded=true" width="640" height="851" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 </section>
 
   <footer>
