--- a/index.html
+++ b/index.html
@@ -84,13 +84,27 @@
   
 	<section>
 		<h2>About Me</h2>
-		<p>I am currently studying Mechanical Engineering at the University of North Florida. I enjoy learning about robotics, computer programming and graphic design. I also enjoy using my knowledge on these topics to educate students who have a passion for them. I have been teaching STEM-based curriculum since 2021 and continue to learn more as I teach.</p>
+		<p>Welcome to my website! I'm a Class of 2026 freshman at the University of North Florida, where I am pursuing a degree in mechanical engineering. My journey in STEM education began in the summer of 2021 when I started teaching robotics and other STEM-based curricula at Indian River State College.
+
+As an enthusiastic educator, I find great joy in inspiring students and fostering their interest in science, technology, engineering, and mathematics. Through teaching, I not only share my knowledge and skills but also continue to learn and grow alongside my students.</p>
+
+<p>Beyond my passion for robotics and STEM, I have developed a political ambition that has driven me to become actively involved in my university's Student Government. I started as a senator and currently hold the position of Senate President Pro-Tempore. This role allows me to advocate for student voices, ensure transparency in decision-making processes, and promote the values of representation and inclusivity on campus.</p>
     
 <div style="text-align: center;">
 <img src="Suit Photo.jpeg" alt="Image description" width="450" height="300">
 </div>
     
-    <p>Although I have a passion to educate students, I also have a passion for political accountability. As an Undergraduate Student at the Univeristy of North Florida, I understand the importance of representation and informational transparency. Because of these strong beliefs, I have served as a Senator in the UNF Student Government since Fall of 2022 and continue to serve as the Senate President Pro-Tempore.</p>
+    <p>Recognizing the significance of effective governance, I am committed to creating an environment where every student feels heard and empowered. I believe that open communication, collaboration, and accountability are crucial in building a thriving and supportive university community.
+
+Alongside my engagement in Student Government, I remain dedicated to my academic pursuits in mechanical engineering. I am fascinated by the intricacies of the field and the endless possibilities it offers in shaping the future through innovation and technological advancements.
+
+Through this website, I aim to share my experiences, insights, and resources on robotics, STEM education, and student governance.</p>
+
+<p>Here, you'll find valuable information about teaching robotics, updates on my involvement in Student Government, and discussions on the intersection of engineering and politics.
+  
+Join me on this exciting journey as we explore the world of robotics, STEM education, and student advocacy. Together, we can work towards a future that prioritizes inclusivity, transparency, and positive change. 
+
+Thank you for visiting my website, and feel free to reach out to me with any questions, collaboration opportunities, or ideas for making a difference in our university community. Let's make an impact together!</p>
 	</section>
   
   <section>
